# pyaegis

./: .gitignore  BUILD.md  MANIFEST.in  README.md  build_backend.py  pyproject.toml  setup.py
aegis/: aegis128l.py  aegis128x2.py  aegis128x4.py  aegis256.py  aegis256x2.py  aegis256x4.py
pyaegis/: _loader.py  aegis128l.py  aegis128x2.py  aegis128x4.py  aegis256.py  aegis256x2.py  aegis256x4.py  aegis_cdef.h  benchmark.py  util.py
tests/: test_encrypt.py  test_mac.py  test_raises.py
tools/: build_backend.py  build_hook.py  gen_cdef.py  gen_modules.py  generate.py  release.py
