[build-system]
requires = ["setuptools>=61.0", "cffi>=2.0.0"]
build-backend = "build_backend"
backend-path = ["tools"]

[project]
name = "pyaegis"
version = "0.3.1"
description = "Python bindings for libaegis"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]
dependencies = [
    "cffi>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/LeoVasanko/pyaegis"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "setuptools>=80.9.0",
]

[tool.setuptools]
packages = ["pyaegis"]

[tool.setuptools.package-data]
pyaegis = ["*.h", "*.so", "*.pyd"]
